syntax = "proto3";
option go_package = "./gen";

message Metadata {
  int32 id = 1;
  string title = 2;
  string description = 3;
  int32 year = 4;
  string director = 5;
}

message MovieDetails {
  double rating = 1;
  Metadata metadata = 2;
}

service MetadataService {
  rpc GetMetadata(GetMetadataRequest) returns (GetMetadataResponse);
  rpc PutMetadata(PutMetadataRequest) returns (PutMetadataResponse);
}

message GetMetadataRequest { int32 id = 1; }
message GetMetadataResponse { Metadata metadata = 1; }

message PutMetadataRequest {
  string title = 1;
  string description = 2;
  int32 year = 3;
  string director = 4;
}
message PutMetadataResponse {}

service RatingService {
  rpc GetAggregatedRating(GetAggregatedRatingRequest)
      returns (GetAggregatedRatingResponse);
  rpc PutRating(PutRatingRequest) returns (PutRatingResponse);
}

message GetAggregatedRatingRequest { int32 movie_id = 1; }
message GetAggregatedRatingResponse { double rating = 1; }

message PutRatingRequest {
  int32 movie_id = 1;
  int32 rating = 2;
}
message PutRatingResponse {}

service MovieService {
  rpc GetMovieDetails(GetMovieDetailsRequest) returns (GetMovieDetailsResponse);
}

message GetMovieDetailsRequest { int32 movie_id = 1; }
message GetMovieDetailsResponse { MovieDetails movie_details = 1; }
